--- a/index.html
+++ b/index.html
@@ -1,1 +1,14 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>a lock</title>
+</head>
+<body style="margin: 0; overflow: hidden;">
+    <canvas id="d" style="position: absolute; top: 0; left: 0;"></canvas>
+    <script src="https://2kinc.me/critters/index.js"></script>
+    <script src="index.js"></script>
+</body>
+</html>
