--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body style="margin: 0; overflow: hidden;">
     <canvas id="d" style="position: absolute; top: 0; left: 0;"></canvas>
-    <script src="https://2kinc.me/critters/index.js"></script>
+    <script src="https://2kinc.me/critters-js/index.js"></script>
     <script src="index.js"></script>
 </body>
 </html>
